--- a/luc4ir-master/index.properties
+++ b/luc4ir-master/index.properties
@@ -1,5 +1,5 @@
 
-coll=data/docs/
-index=index/trec_d45/
+coll=/home/irlab/Documents/share/sonal/TREC_2020
+index=/home/irlab/Documents/share/sonal/TREC_2020_index
 stopfile=stop.txt
 
