Pre-retrieval Query expansion Code Added

--- a/luc4ir-master/retrieve.properties
+++ b/luc4ir-master/retrieve.properties
@@ -7,7 +7,7 @@ index=C:/Users/Procheta/Downloads/new_index/
 sampleIndex=C:/Users/Procheta/Downloads/new_index/
 #queries.xml
 #topics.301-350.xml
-feedback=true
+feedback=false
 eval=true
 fdbk.numtopdocs=5
 stopfile=C:/Users/Procheta/Documents/Indexes/kderlm-master/stop.txt
@@ -16,9 +16,10 @@ qrels.file=C:/Users/Procheta/Downloads/trecpm.txt
 coll=C:/Users/Procheta/7ownloads/mini_index/
 retrieve.num_wanted=1000
 evaluate.graded=true
-rlm.qe=true
+rlm.qe=false
 rlm.qe.newterms.wt=0.7
 rlm.qe.nterms=10
 fdbk.numtopdocs=5
+preretievalExpansion=true
 
 
