--- a/luc4ir-master/src/main/java/org/luc4ir/retriever/init.properties
+++ b/luc4ir-master/src/main/java/org/luc4ir/retriever/init.properties
@@ -1,15 +1,22 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-res.file=C:/Users/Procheta/Desktop/hyperbolic_result.txt
+res.file=C:/Users/Procheta/Desktop/result.txt
 query.file=C:/Users/Procheta/Downloads/topics2018_new.xml
+index=C:/Users/Procheta/Downloads/new_index/
+sampleIndex=C:/Users/Procheta/Downloads/new_index/
 #queries.xml
 #topics.301-350.xml
 feedback=true
-index=C:/Users/Procheta/Downloads/mini_index/
-eval=false
+eval=true
 fdbk.numtopdocs=5
 stopfile=C:/Users/Procheta/Documents/Indexes/kderlm-master/stop.txt
-qrels.file=C:/Users/Procheta/Downloads/a.txt
+qrels.file=C:/Users/Procheta/Downloads/trecpm.txt
 #qrels.trec6.adhoc.txt
-coll=C:/Users/Procheta/Downloads/mini_index/
+coll=C:/Users/Procheta/7ownloads/mini_index/
+retrieve.num_wanted=1000
+evaluate.graded=true
+rlm.qe=true
+rlm.qe.newterms.wt=0.7
+rlm.qe.nterms=10
+fdbk.numtopdocs=5
