--- a/luc4ir-master/retrieve.properties
+++ b/luc4ir-master/retrieve.properties
@@ -7,7 +7,7 @@ index=C:/Users/Procheta/Downloads/new_index/
 sampleIndex=C:/Users/Procheta/Downloads/new_index/
 #queries.xml
 #topics.301-350.xml
-feedback=false
+feedback=true
 eval=true
 fdbk.numtopdocs=5
 stopfile=C:/Users/Procheta/Documents/Indexes/kderlm-master/stop.txt
@@ -18,8 +18,10 @@ retrieve.num_wanted=1000
 evaluate.graded=true
 rlm.qe=false
 rlm.qe.newterms.wt=0.7
-rlm.qe.nterms=10
+rlm.qe.nterms=5
 fdbk.numtopdocs=5
 preretievalExpansion=true
-
+wordvecs.vecfile=
+wordvecs.readfrom=vec
+wordvecs.numnearest=5
 
