kde code updated

--- a/luc4ir-master/retrieve.properties
+++ b/luc4ir-master/retrieve.properties
@@ -21,7 +21,13 @@ rlm.qe.newterms.wt=0.7
 rlm.qe.nterms=5
 fdbk.numtopdocs=5
 preretievalExpansion=true
-wordvecs.vecfile=
+wordvecs.vecfile=C:/Users/Procheta/Downloads/output.vec
 wordvecs.readfrom=vec
 wordvecs.numnearest=5
-
+gaussian.sigma=0.5
+kde.h=1
+kde.kernel=gaussian
+preretrieval.queryexpansion=false
+rlm.type=rlm_iid
+kde.queryexpansion=false
+kde.compose=true
