--- a/luc4ir-master/retrieve.properties
+++ b/luc4ir-master/retrieve.properties
@@ -28,6 +28,8 @@ gaussian.sigma=0.5
 kde.h=1
 kde.kernel=gaussian
 preretrieval.queryexpansion=false
-rlm.type=rlm_iid
+rlm.type=rlm_conditional
 kde.queryexpansion=false
 kde.compose=true
+queryMode=flat
+weighted=true
