--- a/luc4ir-master/retrieve.properties
+++ b/luc4ir-master/retrieve.properties
@@ -3,23 +3,22 @@
 # and open the template in the editor.
 res.file=C:/Users/Procheta/Desktop/result.txt
 query.file=C:/Users/Procheta/Downloads/topics2018_new.xml
-index=C:/Users/Procheta/Downloads/new_index/
-sampleIndex=C:/Users/Procheta/Downloads/new_index/
+index=C:/Users/Procheta/Downloads/sampleindex_all_modified/
+sampleIndex=C:/Users/Procheta/Downloads/sampleindex_all_modified/
 #queries.xml
 #topics.301-350.xml
 feedback=true
 eval=true
-fdbk.numtopdocs=5
 stopfile=C:/Users/Procheta/Documents/Indexes/kderlm-master/stop.txt
 qrels.file=C:/Users/Procheta/Downloads/trecpm.txt
 #qrels.trec6.adhoc.txt
-coll=C:/Users/Procheta/7ownloads/mini_index/
+coll=C:/Users/Procheta/Downloads/mini_index/
 retrieve.num_wanted=1000
 evaluate.graded=true
 rlm.qe=false
-rlm.qe.newterms.wt=0.7
-rlm.qe.nterms=5
-fdbk.numtopdocs=5
+rlm.qe.newterms.wt=.2
+rlm.qe.nterms=15
+fdbk.numtopdocs=20
 preretievalExpansion=true
 wordvecs.vecfile=C:/Users/Procheta/Downloads/output.vec
 wordvecs.readfrom=vec
@@ -28,8 +27,9 @@ gaussian.sigma=0.5
 kde.h=1
 kde.kernel=gaussian
 preretrieval.queryexpansion=false
-rlm.type=rlm_conditional
+rlm.type=rlm_iid
 kde.queryexpansion=false
 kde.compose=true
-queryMode=flat
+queryMode=flat1
 weighted=true
+retrieveMode=flat1
