Clinical Trial Updated

--- a/luc4ir-master/retrieve.properties
+++ b/luc4ir-master/retrieve.properties
@@ -7,7 +7,7 @@ index=C:/Users/Procheta/Downloads/sampleindex_all_modified/
 sampleIndex=C:/Users/Procheta/Downloads/sampleindex_all_modified/
 #queries.xml
 #topics.301-350.xml
-feedback=true
+feedback=false
 eval=true
 stopfile=C:/Users/Procheta/Documents/Indexes/kderlm-master/stop.txt
 qrels.file=C:/Users/Procheta/Downloads/trecpm.txt
@@ -19,8 +19,8 @@ rlm.qe=false
 rlm.qe.newterms.wt=.2
 rlm.qe.nterms=15
 fdbk.numtopdocs=20
-preretievalExpansion=true
-wordvecs.vecfile=C:/Users/Procheta/Downloads/output.vec
+preretievalExpansion=false
+wordvecs.vecfile=C:/Users/Procheta/Downloads/PubMed-w2v.vec/PubMed-w2v.vec
 wordvecs.readfrom=vec
 wordvecs.numnearest=5
 gaussian.sigma=0.5
@@ -33,3 +33,5 @@ kde.compose=true
 queryMode=flat1
 weighted=true
 retrieveMode=flat1
+clinicalIndex==C:/Users/Procheta/Downloads/clinical_index/sampleindex_clinical_index/
+clinicalFeedback=true
